# libaejson

./: .gitignore  CHANGELOG.md  LICENSE  Makefile.am  README.md  configure.ac  local-configure
include/aejson/: aejson.h  loc.h  node.h  object.h  pair.h  parser.h  query.h  strlit.h  value.h
libaejson/: Makefile.am  json-parse.y  json-scan.l  object.c  pair.c  parser.c  query-parse.y  query-scan.l  query.c  strlit.c  value.c
test/: Makefile.am  aej-test.c  test.json  test2.json  test3.json  test4.json
